Searchbar for Safari

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -20,9 +20,10 @@
                 <div class="search-box">
                     <button class="btn-search"><img src="styles/assets/search_icon.png" alt=""></button>
                     <input type="text" class="input-search" placeholder="Type to Search...">
-                  </div>
+                </div>
             </div>
         </div>
     </header>
 </body>
+<script src="scripts/header.js"></script>
 </html>
