--- a/web-app/index.html
+++ b/web-app/index.html
@@ -34,6 +34,7 @@
     </header>
     <!-- MAIN -->
     <main>
+        <!-- DISRUPTIONS -->
         <section id="disruptions">
             <div class="section-title-box">
                 <h2 class="section-title">List of disruptions today</h2>
@@ -59,6 +60,56 @@
                             - Galarne stops postponed to temporary stops placed on bd Alexandre Millerand<br>
                             - Pompidou and Hôtel de Région stops postponed to temporary stops placed on bd Général de Bollardière
                         </p>
+                    </div>
+                </div>
+
+                <div class="line-box interactive">
+                    <div class="line-box-header">
+                        <span class="line-name">C1</span>
+                        <div class="line-description-box">
+                            <span class="line-stop">Carnaval de Nantes</span>
+                            <span class="line-disruptions">From 03/03/24 at 7am to 9pm</span>
+                        </div>
+                        <img class="down-arrow" src="styles/assets/down-arrow.png" alt="Down arrow">
+                    </div>
+                    <div class="content">
+                        <p class="content-text">Work at the Galarne stop, lines 5 and 26 diverted in this sector in both directions
+                            <br>
+                            Where to take your bus
+                            <br>
+                            Lines 5 and 26
+                            <br>
+                            - Galarne stops postponed to temporary stops placed on bd Alexandre Millerand<br>
+                            - Pompidou and Hôtel de Région stops postponed to temporary stops placed on bd Général de Bollardière
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAVORITES -->
+        <section id="favorites">
+            <div class="section-title-box">
+                <h2 class="section-title">Your favorites</h2>
+                <h3 class="section-subtitle">You can add lines to favorites</h3>
+            </div>
+            <div class="section-line-boxes">
+                <div class="line-box">
+                    <div class="line-box-header">
+                        <span class="line-name">C1</span>
+                        <div class="line-description-box">
+                            <a href="#" class="line-stop">Rond-point de Paris</a>
+                            <span class="line-disruptions">To Haluchère-Batignolles</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="line-box">
+                    <div class="line-box-header">
+                        <span class="line-name">C1</span>
+                        <div class="line-description-box">
+                            <a href="#" class="line-stop">Rond-point de Paris</a>
+                            <span class="line-disruptions">To Haluchère-Batignolles</span>
+                        </div>
                     </div>
                 </div>
             </div>
