--- a/web-app/index.html
+++ b/web-app/index.html
@@ -114,7 +114,17 @@
                 </div>
             </div>
         </section>
+        <!-- Average attendance -->
+        <section id="average-attendance">
+            <div class="section-title-box">
+                <h2 class="section-title">Average attendance</h2>
+                <h3 class="section-subtitle">Since 24 hours and on all lines</h3>
+            </div>
+            <canvas id="average-attendance-chart"></canvas>
+        </section>
     </main>
 </body>
 <script src="scripts/header.js"></script>
+<script src="library/chart.js"></script>
+<script src="scripts/chart.js"></script>
 </html>
