--- a/web-app/index.html
+++ b/web-app/index.html
@@ -24,12 +24,6 @@
                 <h1 id="website-title">NaoLibre</h1>
                 <img id="website-logo" src="styles/assets/header_logo.png" alt="NaoLibre logo">
             </div>
-            <div id="search-section">
-                <div class="search-box">
-                    <button class="btn-search"><img src="styles/assets/search_icon.png" alt=""></button>
-                    <input type="text" class="input-search" placeholder="Type to Search...">
-                </div>
-            </div>
         </div>
     </header>
     <!-- MAIN -->
@@ -123,8 +117,33 @@
             <canvas id="average-attendance-chart"></canvas>
         </section>
     </main>
+    <!-- Footer -->
+    <footer>
+        <div id="footer-content">
+            <a href="#" class="icon active">
+                <img src="styles/assets/home_icon.png" alt="Home Icon">
+                <span>Home</span>
+            </a>
+            <a href="#" class="icon">
+                <img id="search-icon" src="styles/assets/search_icon.png" alt="Search Icon">
+                <span>Search</span>
+            </a>
+            <!-- Report Button -->
+            <button id="report-button">
+                <img src="styles/assets/report_icon.png" alt="Report Icon">
+            </button>
+            <a href="#" class="icon">
+                <img src="styles/assets/account_icon.png" alt="Account Icon">
+                <span>Account</span>
+            </a>
+            <a href="https://gitlab.univ-nantes.fr/pub/but/but2/sae4.real.01_developpement_d_une_application_complexe/groupe01/eq_01_01_chevreux-arthur_leport-clovis_gromard-alexys_jouault-lancelot_martel-floran" class="icon">
+                <img src="styles/assets/github_icon.png" alt="GitHub Icon">
+                <span>Github</span>
+            </a>
+        </div>
+    </footer>
 </body>
-<script src="scripts/header.js"></script>
+<script src="scripts/script.js"></script>
 <script src="library/chart.js"></script>
 <script src="scripts/chart.js"></script>
 </html>
