--- a/web-app/index.html
+++ b/web-app/index.html
@@ -28,6 +28,16 @@
     </header>
     <!-- MAIN -->
     <main>
+        <!-- SEARCHBAR -->
+        <section id="searchbar" class="active">
+            <div class="section-title-box">
+                <h2 class="section-title">Search</h2>
+            </div>
+            <div id="searchbar-content">
+                <input type="text" id="search-input" placeholder="Bus stop, bus line and more">
+                <img id="search-icon-searchbar" src="styles/assets/search_icon.png" alt="Search Icon">
+            </div>
+        </section>
         <!-- DISRUPTIONS -->
         <section id="disruptions">
             <div class="section-title-box">
@@ -136,7 +146,7 @@
                 <img src="styles/assets/account_icon.png" alt="Account Icon">
                 <span>Account</span>
             </a>
-            <a href="https://gitlab.univ-nantes.fr/pub/but/but2/sae4.real.01_developpement_d_une_application_complexe/groupe01/eq_01_01_chevreux-arthur_leport-clovis_gromard-alexys_jouault-lancelot_martel-floran" class="icon">
+            <a href="https://gitlab.univ-nantes.fr/pub/but/but2/sae4.real.01_developpement_d_une_application_complexe/groupe01/eq_01_01_chevreux-arthur_leport-clovis_gromard-alexys_jouault-lancelot_martel-floran" class="icon" target="_blank">
                 <img src="styles/assets/github_icon.png" alt="GitHub Icon">
                 <span>Github</span>
             </a>
